fix sizing on smallest screen sizes

--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -146,10 +146,11 @@ header{
                 @include transition("all 500ms ease");
               }
               .pannel-text {
+                margin: 0px;
                 @include center-me-horiz();
                 bottom: 10%;
                 font-family: "Roboto", sans-serif;
-                font-size: 20px;
+                font-size: 14px;
                 font-weight: 400;
                 color: $l-grey;
                 @include transition("all 500ms ease");
